# Add your source files to the project
add_executable(testCopyAssignment testCopyAssignment.cpp)
add_executable(testMoveAssignment testMoveAssignment.cpp)
add_executable(testOverloadedNegationOp testOverloadedNegationOp.cpp) # Overload negation operator
add_executable(testOverloadedBinaryOp testOverloadedBinaryOp.cpp) # Overload Binary operator
add_executable(OLNonMembFuncs OLNonMembFuncs.cpp) # Overload Binary operator that are non-member methods