# Add your source files to the project
add_executable(test_s04 test.cpp)
add_executable(FactoryMethod FactoryMethod.cpp)
add_executable(Factory Factory.cpp)
add_executable(InnerFactory InnerFactory.cpp)
add_executable(AbstractFactory AbstractFactory.cpp)
add_executable(FunctionalFactory FunctionalFactory.cpp)
add_executable(Exercise Exercise.cpp)